add time execution
